--- a/contact-us/style/Contact_Us.css
+++ b/contact-us/style/Contact_Us.css
@@ -156,103 +156,126 @@ body#sfm_Contact_Us_body
     height:5px;
     display:none;
 }
+#Contact_Us #formsection_0_0
+{
+    z-index:1000;
+}
 #Contact_Us #heading_container
 {
-    z-index:1;
-}
-#Contact_Us #label_container
-{
-    z-index:3;
-}
-#Contact_Us #Name_container
-{
     z-index:4;
 }
-#Contact_Us #Name
+#Contact_Us #FirstName_container
+{
+    z-index:7;
+}
+#Contact_Us #FirstName
 {
     float:left;
-    z-index:4;
+    z-index:7;
 }
-#Contact_Us #label1_container
-{
-    z-index:5;
-}
-#Contact_Us #Name2_container
-{
-    z-index:6;
-}
-#Contact_Us #Name2
-{
-    float:left;
-    z-index:6;
-}
-#Contact_Us #label3_container
+#Contact_Us #LastName_container
 {
     z-index:9;
 }
+#Contact_Us #LastName
+{
+    float:left;
+    z-index:9;
+}
+#Contact_Us #label3_container
+{
+    z-index:12;
+}
 #Contact_Us #Email_container
 {
-    z-index:2;
+    z-index:5;
 }
 #Contact_Us #Email
 {
     float:left;
-    z-index:2;
+    z-index:5;
 }
-#Contact_Us #label4_container
+#Contact_Us #MCVersions_container
 {
-    z-index:10;
+    z-index:17;
 }
-#Contact_Us #Name3_container
-{
-    z-index:11;
-}
-#Contact_Us #Name3
+#Contact_Us #MCVersions
 {
     float:left;
-    z-index:11;
+    z-index:17;
 }
-#Contact_Us #label5_container
+#Contact_Us #formsection_0_174
 {
-    z-index:12;
+    z-index:1000;
 }
-#Contact_Us #Name4_container
+#Contact_Us #UsernameBedrock_container
 {
-    z-index:13;
+    z-index:14;
 }
-#Contact_Us #Name4
+#Contact_Us #UsernameBedrock
 {
     float:left;
-    z-index:13;
+    z-index:14;
+}
+#Contact_Us #formsection_0_231
+{
+    z-index:1000;
+}
+#Contact_Us #UsernameJava_container
+{
+    z-index:16;
+}
+#Contact_Us #UsernameJava
+{
+    float:left;
+    z-index:16;
+}
+#Contact_Us #formsection_0_300
+{
+    z-index:1000;
+}
+#Contact_Us #formsection_0_303
+{
+    z-index:1000;
 }
 #Contact_Us #label2_container
 {
-    z-index:7;
+    z-index:10;
 }
 #Contact_Us #Message_container
 {
-    z-index:8;
+    z-index:11;
 }
 #Contact_Us #Message
 {
-    height:80px;
+    height:88px;
 }
 #Contact_Us #Message
 {
     float:left;
-    z-index:8;
+    z-index:11;
+}
+#Contact_Us #formsection_0_421
+{
+    z-index:1000;
 }
 
 #Contact_Us #Contact_Us_outer_div_p1
 {
-    width:300px;
-    height:400px;
+    width:259px;
+    height:426px;
+}
+#Contact_Us #formsection_0_0
+{
+    width:259px;
+    height:174px;
+    position:relative;
 }
 #Contact_Us #heading_container
 {
     position:absolute;
-    left:99px;
-    top:8px;
+    left:76px;
+    top:0px;
     width:160px;
     height:20px;
 }
@@ -263,60 +286,24 @@ body#sfm_Contact_Us_body
     left:0px;
     text-align:left;
 }
-#Contact_Us #label_container
+#Contact_Us #FirstName_container
 {
     position:absolute;
-    left:86px;
-    top:28px;
+    left:55px;
+    top:38px;
 }
-#Contact_Us #label_container
-{
-    width:60px;
-    height:20px;
-}
-#Contact_Us #label
-{
-    position:absolute;
-    top:3px;
-    right:0px;
-    text-align:right;
-}
-#Contact_Us #Name_container
-{
-    position:absolute;
-    left:78px;
-    top:46px;
-}
-#Contact_Us #Name
+#Contact_Us #FirstName
 {
     width:114px;
     height:19px;
 }
-#Contact_Us #label1_container
+#Contact_Us #LastName_container
 {
     position:absolute;
-    left:88px;
-    top:69px;
+    left:57px;
+    top:77px;
 }
-#Contact_Us #label1_container
-{
-    width:60px;
-    height:20px;
-}
-#Contact_Us #label1
-{
-    position:absolute;
-    top:3px;
-    right:0px;
-    text-align:right;
-}
-#Contact_Us #Name2_container
-{
-    position:absolute;
-    left:80px;
-    top:85px;
-}
-#Contact_Us #Name2
+#Contact_Us #LastName
 {
     width:114px;
     height:19px;
@@ -324,8 +311,8 @@ body#sfm_Contact_Us_body
 #Contact_Us #label3_container
 {
     position:absolute;
-    left:90px;
-    top:109px;
+    left:67px;
+    top:101px;
 }
 #Contact_Us #label3_container
 {
@@ -342,77 +329,76 @@ body#sfm_Contact_Us_body
 #Contact_Us #Email_container
 {
     position:absolute;
-    left:79px;
-    top:127px;
+    left:56px;
+    top:119px;
 }
 #Contact_Us #Email
 {
     width:114px;
     height:19px;
 }
-#Contact_Us #label4_container
+#Contact_Us #MCVersions_container
 {
     position:absolute;
-    left:97px;
-    top:159px;
+    left:44px;
+    top:146px;
 }
-#Contact_Us #label4_container
+#Contact_Us #MCVersions
 {
-    width:80px;
-    height:20px;
+    width:184px;
+    height:22px;
 }
-#Contact_Us #label4
+#Contact_Us #formsection_0_174
+{
+    width:259px;
+    height:57px;
+    position:relative;
+}
+#Contact_Us #UsernameBedrock_container
 {
     position:absolute;
-    top:0px;
-    right:0px;
-    text-align:right;
+    left:60px;
+    top:27px;
 }
-#Contact_Us #Name3_container
-{
-    position:absolute;
-    left:82px;
-    top:187px;
-}
-#Contact_Us #Name3
+#Contact_Us #UsernameBedrock
 {
     width:114px;
     height:19px;
 }
-#Contact_Us #label5_container
+#Contact_Us #formsection_0_231
+{
+    width:259px;
+    height:69px;
+    position:relative;
+}
+#Contact_Us #UsernameJava_container
 {
     position:absolute;
-    left:103px;
-    top:216px;
+    left:62px;
+    top:33px;
 }
-#Contact_Us #label5_container
-{
-    width:60px;
-    height:20px;
-}
-#Contact_Us #label5
-{
-    position:absolute;
-    top:0px;
-    right:0px;
-    text-align:right;
-}
-#Contact_Us #Name4_container
-{
-    position:absolute;
-    left:83px;
-    top:243px;
-}
-#Contact_Us #Name4
+#Contact_Us #UsernameJava
 {
     width:114px;
     height:19px;
+}
+#Contact_Us #formsection_0_300
+{
+    width:259px;
+    height:3px;
+    position:relative;
+}
+#Contact_Us #formsection_0_303
+{
+    width:259px;
+    height:118px;
+    position:relative;
 }
 #Contact_Us #label2_container
 {
     position:absolute;
-    left:103px;
-    top:272px;
+    left:83px;
+    top:2px;
 }
 #Contact_Us #label2_container
 {
@@ -429,11 +415,17 @@ body#sfm_Contact_Us_body
 #Contact_Us #Message_container
 {
     position:absolute;
-    left:22px;
-    top:291px;
+    left:0px;
+    top:28px;
 }
 #Contact_Us #Message
 {
     width:253px;
-    height:74px;
+    height:82px;
+}
+#Contact_Us #formsection_0_421
+{
+    width:259px;
+    height:5px;
+    position:relative;
 }
